[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://CirculoNegro.tscn" type="PackedScene" id=4]
[ext_resource path="res://Rombito.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 500, 500 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="CirculoNegro" parent="." instance=ExtResource( 4 )]

[node name="Rombito" parent="." instance=ExtResource( 5 )]

[node name="RombitoTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="TrianguloTimer" type="Timer" parent="."]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="area_entered" from="Player" to="Player" method="_on_Player_area_entered"]
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="body_entered" from="Rombito" to="Rombito" method="_on_Rombito_body_entered"]
[connection signal="rombito_atrapado" from="Rombito" to="." method="_on_Rombito_rombito_atrapado"]
[connection signal="timeout" from="RombitoTimer" to="." method="_on_RombitoTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="TrianguloTimer" to="CirculoNegro" method="_on_TrianguloTimer_timeout"]
